fixed spacing

--- a/echoes/css/style.css
+++ b/echoes/css/style.css
@@ -24,3 +24,11 @@ h4{
 	position:relative;
 	left:40px;
 }
+.container-full {
+  margin: 0 auto;
+  width: 100%;
+}
+.no-gutter > [class*='col-'] {
+    padding-right:0;
+    padding-left:0;
+}
